fix contrast colors

--- a/style.css
+++ b/style.css
@@ -680,6 +680,10 @@ p {
     font-size: 14px;
 }
 
+q{
+    color: #000000;
+}
+
 .tight-width-whitespace {
     max-width: 600px;
     margin: auto auto auto auto;
@@ -771,15 +775,19 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #f17941;
 }
 
-.tc-white {
-    color: #F3976C!important;
+.tc-orange {
+    color: #f17941!important;
+}
+
+.tc-white{
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #f17941;
     color: #FFFFFF!important;
 }
 
@@ -797,7 +805,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #f17941!important;
 }
 
 .ltc-atomic-tangerine:hover {
